--- a/app/src/main/res/layout/check_out_rows.xml
+++ b/app/src/main/res/layout/check_out_rows.xml
@@ -7,7 +7,6 @@
     android:layout_marginTop="25dp"
     android:background="@color/primary_black">
 
-
     <TextView
         android:id="@+id/roomTypeView"
         android:layout_width="wrap_content"
@@ -82,13 +81,14 @@
     <TextView
         android:id="@+id/clientEmailAD"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:gravity="center"
         android:layout_marginBottom="2dp"
         android:background="@drawable/thin_border"
         android:padding="10dp"
         android:text="email"
         android:textColor="@color/primary_white"
-        android:textSize="22sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/roomNumberAD"
         app:layout_constraintStart_toEndOf="@+id/clientEmailView"
